More porting work and arena fixes