@@ -95,7 +95,7 @@ public class EssenceBlockWhite extends EssenceBlock {
 
     @Override
     public void performUniqueArenaTick(ServerLevel serverLevel, BlockPos blockPos, BlockState blockState, EssenceBlockEntity essenceBlockEntity) {
-        if (essenceBlockEntity.getPlayerInArena().size() == 0) {
+        if (essenceBlockEntity.getPlayerInArena().isEmpty()) {
             return;
         }
 
@@ -105,7 +105,7 @@ public class EssenceBlockWhite extends EssenceBlock {
 
         List<EssenceBlockEntity.EventEntities> eventEntitiesInArena = essenceBlockEntity.getEventEntitiesInArena();
         int totalCrystals = eventEntitiesInArena.size();
-        int totalhealth = 0;
+        float totalhealth = 0;
         float totalMaxHealth = 6 * BzGeneralConfigs.cosmicCrystalHealth;
         boolean respawnedACrystal = false;
 
@@ -184,7 +184,7 @@ public class EssenceBlockWhite extends EssenceBlock {
                 do {
                     chosenAttack = CosmicCrystalState.values()[serverLevel.getRandom().nextInt(CosmicCrystalState.values().length)];
                 }
-                while (crystals.get(0).pastStates.contains(chosenAttack) || chosenAttack == CosmicCrystalState.NORMAL);
+                while (crystals.getFirst().pastStates.contains(chosenAttack) || chosenAttack == CosmicCrystalState.NORMAL);
 
                 float threshold;
                 if (healthPercent > 0.75f) {
@@ -239,7 +239,7 @@ public class EssenceBlockWhite extends EssenceBlock {
         essenceBlockEntity.getEventBar().setProgress(totalhealth / totalMaxHealth);
     }
 
-    private Entity SpawnNewCrystal(ServerLevel serverLevel, BlockPos blockPos, EssenceBlockEntity essenceBlockEntity, int orbitOffset, float difficultyBoost, List<EssenceBlockEntity.EventEntities> eventEntitiesInArena) {
+    private void SpawnNewCrystal(ServerLevel serverLevel, BlockPos blockPos, EssenceBlockEntity essenceBlockEntity, int orbitOffset, float difficultyBoost, List<EssenceBlockEntity.EventEntities> eventEntitiesInArena) {
         CosmicCrystalEntity entity = BzEntities.COSMIC_CRYSTAL_ENTITY.get().spawn(serverLevel, blockPos, EntitySpawnReason.EVENT);
         if (entity != null) {
             entity.addTag("the_bumblezone.white_essence_arena");
@@ -250,7 +250,6 @@ public class EssenceBlockWhite extends EssenceBlock {
             entity.setDifficultyBoost(difficultyBoost);
             eventEntitiesInArena.add(new EssenceBlockEntity.EventEntities(entity.getUUID()));
         }
-        return entity;
     }
 
     public void crystalKilled(CosmicCrystalEntity cosmicCrystalEntity, EssenceBlockEntity essenceBlockEntity) {
